# CartographyML

./: .gitignore  CMakeLists.txt  README.md  config.h.in  reset-example-data.sh
CartographerML/: AbstractFeaturesSource.cpp  AbstractFeaturesSource.h  AbstractTool.cpp  AbstractTool.h  CMakeLists.txt  CartographerML.qrc  EditableDatasource.cpp  EditableDatasource.h  EditorView.h  Feature.h  ProxyTool.cpp  ProxyTool.h  Tool.cpp  Tool.h  ToolController.cpp  ToolController.h  ToolEvents.cpp  ToolEvents.h  initialise.cpp  initialise.h
CartographerML/mapnik/: datasource.cpp  datasource.h  featureset.cpp  featureset.h
CartographerML/qml/CartographerML/Components/: SelectionBox.qml
CartographerML/qml/CartographerML/Tools/: CreateLineStringFeatureTool.qml  CreateLineStringGeometryTool.qml  CreateLineStringTool.qml  CreatePointFeatureTool.qml  CreatePointTool.qml  CreatePolygonFeatureTool.qml  EditableDelegate.qml  NavigationTool.qml  SelectionTool.qml
CartographerML/sources/: GDALFeaturesSource.cpp  GDALFeaturesSource.h  OgrFeaturesSource.cpp  OgrFeaturesSource.h
GeometryML/: CMakeLists.txt  Collection.cpp  Collection.h  Convert.cpp  Convert.h  Feature.cpp  Feature.h  FeatureAttributesModel.cpp  FeatureAttributesModel.h  FeaturesSet.cpp  FeaturesSet.h  Geometry.cpp  Geometry.h  GeometryML.qrc  Geometry_p.h  LineSegment.h  LineString.cpp  LineString.h  LineString_p.h  LinearRing.cpp  LinearRing.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  initialise.cpp  initialise.h  rect_utils_p.h
GeometryML/Convert/: Gdal.cpp  Gdal.h  Mapnik.cpp  Mapnik.h  Spatialite.cpp  Spatialite.h
GeometryML/Tools/: LineString.cpp  LineString.h  Polygon.cpp  Polygon.h
GeometryML/qml/GeometryML/: FeatureAttributesTable.qml
MapnikML/: AbstractDatasource.cpp  AbstractDatasource.h  CMakeLists.txt  Datasource.cpp  Datasource.h  GridView.cpp  GridView.h  Keys.cpp  Keys.h  Layer.cpp  Layer.h  Map.cpp  Map.h  MapElement.cpp  MapElement.h  MapView.cpp  MapView.h  MapnikEnums_p.cpp  MapnikEnums_p.h  Rule.cpp  Rule.h  Style.cpp  Style.h  Symbolizers.cpp  Symbolizers.h  Utils.cpp  Utils.h  UtilsAttachedProperty.cpp  UtilsAttachedProperty.h  ViewTransform.cpp  ViewTransform.h  initialise.cpp  initialise.h
TerrainML/: AbstractDatasource.cpp  AbstractDatasource.h  CMakeLists.txt  HeightMap.cpp  HeightMap.h  HeightMapBaseView.cpp  HeightMapBaseView.h  HeightMapBaseView_p.h  HeightMapView.cpp  HeightMapView.h  HeightMapWrapper.cpp  HeightMapWrapper.h  HillshadeView.cpp  HillshadeView.h  TerrainML.qrc  initialise.cpp  initialise.h
TerrainML/Algorithms/: Generators.cpp  Generators.h  Hillshade.cpp  Hillshade.h  Terraforming.cpp  Terraforming.h  rand.cpp  rand_p.h  rand_salt_p.h
TerrainML/qml/TerrainML/: HeightMapMosaicView.qml
TerrainML3D/: CMakeLists.txt  HeightMapMesh.cpp  HeightMapMesh.h  initialise.cpp  initialise.h
cmake/modules/: FindMapnik.cmake
examples/: CMakeLists.txt  config.h.in
examples/shape_editor/: CMakeLists.txt  main.cpp  main.qml
examples/shape_viewer/: CMakeLists.txt  main.cpp  main.qml
examples/terrain_editor/: CMakeLists.txt  main.cpp  main.qml
examples/terrain_mosaic/: CMakeLists.txt  TestDatasource.cpp  TestDatasource.h  main.cpp  main.qml
examples/terrain_viewer_3d/: CMakeLists.txt  main.cpp  main.qml
examples/world_viewer/: CMakeLists.txt  data.qrc  main.cpp  main.qml
examples/world_viewer/data/: ne_110m_populated_places.dbf  ne_110m_populated_places.shp  ne_110m_populated_places.shx  readme.txt
